Use Java 21, and updated dependency versions